<resources>
    <string name="app_name">Corona Attack</string>
    <string name="high_score">"High score: "</string>
    <string name="btn_start">START!</string>
    <string name="records_score"><u>Score</u></string>
    <string name="records_name"><u>Player Name</u></string>
    <string name="records_rank"><u>Rank</u></string>
    <string name="records_table">Records</string>
    <string name="game_name">Corona Attack</string>
    <string name="intro_txt">Safe your city from the Coronavirus!</string>
    <string name="instructions_btn">Instructions</string>
    <string name="player_name">Name</string>
    <string name="start_game">Start</string>
    <string name="pb_Status">High score table loaded</string>
    <string name="win_game">Congratulations!</string>
    <string name="text_win">You saved the city !</string>
    <string name="game_over">GAME OVER!</string>
    <string name="text_lose">You almost made it !</string>
    <string name="default_score_text" translatable="false">0</string>
    <string name="back_menu">Main Menu</string>
    <string name="try_again">Try Again</string>
    <string name="level">Level :</string>
    <string name="game_score">Score :</string>
    <string name="lifes_object">Life\'s object</string>
    <string name="sound_click">Sound button clicked</string>
    <string name="music_on_off">Music on/off</string>
    <string name="tap_to_start">Tap to Start</string>
    <string name="level_selection_header">Level Selection</string>
    <string name="back_btn">Back</string>
    <string name="next_level">Next level</string>
    <string name="continue_this_level">retry this level</string>
    <string name="hint_rank">Save score and exit</string>
    <string name="username">User Name</string>
    <string name="game_paused">Game Paused</string>
    <string name="game_paused_message">Do you wish to continue the game or go back to the main menu?</string>
    <string name="continue_game">Continue</string>
    <string name="china_label">Welcome to China !</string>
    <string name="italy_label">Welcome to Italy !</string>
    <string name="sweden_label">Welcome to Sweden !</string>
    <string name="russia_label">Welcome to Russia !</string>
    <string name="total_game_score">Total score :</string>
    <string name="titleShare">"Hey, watch my result from Corona Attack game: "</string>
    <string name="share">Share score</string>
    <string name="rankTable_btn">Rank</string>
    <string name="paused_menu">Menu</string>
    <string name="game_tut">Welcome to game tutorial !</string>
    <string name="game_tut2">Let\'s learn how to save the world from the Coronavirus</string>
    <string name="doctor_tut">You play the doctor</string>
    <string name="doctor_tut3_1">And release in</string>
    <string name="corona_tut">Avoid from the Coronavirus</string>
    <string name="corona_tut1">Hitting it will reduce your life\'s count</string>
    <string name="heal_tut1">Taking healkit will increase your life\'s count</string>
    <string name="heal_tut2">Remember - 3 strikes and you\'r out !</string>
    <string name="items_tut">Collect the hygiene products to recieve 10 points</string>
    <string name="bonus_tut_1">Collect the mask</string>
    <string name="goodluck_tut">Good Luck !</string>
    <string name="brazil_label">Welcome to Brazil !</string>
    <string name="germany_label">Welcome to Germany !</string>
    <string name="israel_label">Welcome to Israel !</string>
    <string name="usa_label">Welcome to USA !</string>
    <string name="doctor_tut2_2">in order to move up</string>
    <string name="doctor_tut2_1">Touch the screen</string>
    <string name="doctor_tut3_2">order to move down</string>
    <string name="bonus_tut_2">" to recieve 30 points"</string>
</resources>