<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/my_layout">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/endGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_over"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textSize="50sp"/>
        <ImageView
            android:id="@+id/volume_iv_levels"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/music3" />
        <Button
            android:id="@+id/share_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/ic_baseline_share_24" />
    </RelativeLayout>

    <TextView
        android:id="@+id/endGameText"
        android:layout_width="250dp"
        android:text="@string/text_lose"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/sadEmoji"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_score_text"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/btn_shape"
            android:onClick="backMainMenu"
            android:text="@string/back_menu" />

        <Button
            android:id="@+id/btn_nextLevel"
            style="@android:style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape"/>

    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/black"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_rank"
            android:textSize="20sp"
            android:id="@+id/save_score_cb"
            android:textColor="@color/black" />
    </TableRow>

</LinearLayout>