<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/records_rank"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:id="@+id/rank_lbl"/>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/records_score"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/score_lbl"/>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:text="@string/records_name"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/name_lbl"/>

    </RelativeLayout>
</RelativeLayout>