<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recordsActivityLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/backBtn_tv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_button_arrow"
                android:gravity="center" />
            <TextView
                android:id="@+id/textView_title_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:text="@string/records_table"
                android:textStyle="italic"
                android:textSize="40sp" />
            <ImageView
                android:id="@+id/volume_iv_levels"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/music3"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rank_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/records_rank"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:id="@+id/score_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/records_score"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/name_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/records_name"
                    android:textSize="20sp" />

            </RelativeLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/listView_records"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@color/lightBlue"
            android:dividerHeight="3dp">

        </ListView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_result"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="180dp"
        android:progress="10"
        android:progressDrawable="@drawable/circle" />

</RelativeLayout>