<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/startbg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/start_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/game_name"
                android:textSize="60sp"
                android:textStyle="italic"
                android:textColor="@color/black"/>

            <ImageView
                android:id="@+id/volume_iv_levels"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/music3"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/start_details"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center|left"
            android:text="@string/intro_txt"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:padding="20dp">
                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:onClick="startGame"
                    android:background="@drawable/play_btn"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_game"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="100dp"
                android:layout_marginRight="10dp"
                android:gravity="right">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp">
                    <Button
                        android:id="@+id/btn_records"
                        android:layout_width="100dp"
                        android:layout_height="90dp"
                        android:onClick="showRecords"
                        android:background="@drawable/rank"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rankTable_btn"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/instructions_btn"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:onClick="showInstructions"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/instruction"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions_btn"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>